--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
     </div>
     <div class="container right-side">
         <img src="image/R2.jpg">
+        <img class="one" src="/image/1.png" alt="">
+        <img class="two" src="/image/L.png" alt="">
+        <img class="three" src="/image/last.png" alt="">
+
     </div>
 </section>
 </body>
