add another section

--- a/index.html
+++ b/index.html
@@ -68,7 +68,11 @@
         <img class="two" src="/image/L.png" alt="">
         <img class="three" src="/image/last.png" alt="">
 
+
     </div>
+</section>
+<section>
+    <h1> Project3</h1>
 </section>
 </body>
 </html>
