--- a/index.html
+++ b/index.html
@@ -57,11 +57,20 @@
     </div>
 </section>
 <!--end Sub header-->
-<section class=" container banner flex">
+<section class="banner flex">
+    <div class="container left-banner
+    ">
     <div class="container left-side">
-       <h2>Primium Web Hosting for your website</h2>
-       <p></p>
+       <h2 class=" container left-h2">Primium Web Hosting for your website</h2>
+       <p>blazing fast web hosting for individuals and business of all size backed by 24*7*365</p>
     </div>
+    <div class="left-buttom flex">
+        <ul class=" ul-class flex">
+            <li class="primary-button btn-class"><a href="#">Create an account</a></li>
+            <li class="primary-button btn-class"><a href="#">Create an account</a></li>
+        </ul>
+    </div>
+</div>
     <div class="container right-side">
         <img src="image/R2.jpg">
         <img class="one" src="/image/1.png" alt="">
