--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div class="left-buttom flex">
         <ul class=" ul-class flex">
             <li class="primary-button btn-class"><a class="btn-text" href="#">Create an account</a></li>
-            <li class="secondary-button btn-class"><a  class="btn-text-l"href="#">Create an account</a></li>
+            <li class="secondary-button btn-class"><a  class="btn-text-l"href="#">Choose your plan</a></li>
         </ul>
     </div>
 </div>
