--- a/index.html
+++ b/index.html
@@ -159,5 +159,23 @@
     </div>
 
 </section>
+
+<section class="subscription">
+<div class=" container s-header">
+    <h3 class="s-head">Ready to get started with 
+        Lemon Wares?</h3>
+        <p class="s-p">Choose the packages that suits you</p>
+</div>
+
+<div class=" container switch ">
+    <div class="s-toggle flex"> 
+        <p class="p1-position">Monthly</p>
+    <input class="position" type="checkbox" id="darkmode-toggle"/>
+    <label class="position" for="darkmode-toggle">
+    <p class="p2-position">Yearly</p>  
+    </div>
+    
+</div>
+</section>
 </body>
 </html>
